--- a/aboutus.html
+++ b/aboutus.html
@@ -43,8 +43,8 @@
 
       <a href="index.html" class="logo d-flex align-items-center me-auto me-lg-0">
         <!-- Uncomment the line below if you also wish to use an image logo -->
-        <img src="assets/img/logolovebook1.png" alt="">
-        <h1>Lovebook<span>.</span></h1>
+        <img src="assets/img/logolovebookFIX.png" alt="">
+        <h1 class="navbar">Lovebook<span>.</span></h1>
       </a>
 
       <nav id="navbar" class="navbar">
@@ -98,11 +98,11 @@
           </div>
   
           <div class="row gy-4">
-            <div class="col-lg-7 position-relative about-img" style="background-image: url(assets/img/about1.jpg) ;" data-aos="fade-up" data-aos-delay="150">
+            <div class="col-lg-7 position-relative about-img" style="background-image: url(assets/img/about2.jpg) ;" data-aos="fade-up" data-aos-delay="150">
             </div>
             <div class="col-lg-5 d-flex align-items-end" data-aos="fade-up" data-aos-delay="300">
               <div class="content ps-0 ps-lg-5">
-                <p>
+                <p style="text-align:justify">
                   Lovebook merupakan wadah dimana seseorang bisa menjual dan membeli buku bekas original dalam bentuk aplikasi berbasis website. Lovebook 
                   merupakan inovasi baru karena sebelumnya belum ada wadah untuk melakukan transaksi jual-beli buku bekas original. Lovebook dapat memberikan 
                   manfaat terhadap lingkungan karena dapat mengurangi jumlah pohon yang harus ditebang hanya untuk menerbitkan buku yang sudah ada sebelumnya. 
@@ -110,8 +110,8 @@
                   seseorang untuk membaca buku yang ingin dibaca namun sudah tidak diterbitkan lagi.
                 </p><br>
                 <p><b>VISI</b></p>
-                <p>Menjadi perusahaan layanan penjualan buku terbaik di Indonesia dengan menyediakan media yang aktif, inovatif, dan efisien bagi para pengguna. </p>
-                <p><b>MISI</b></p>
+                <p style="text-align:justify">Menjadi perusahaan layanan penjualan buku terbaik di Indonesia dengan menyediakan media yang aktif, inovatif, dan efisien bagi para pengguna. </p>
+                <p style="text-align:justify"><b>MISI</b></p>
                 <ul>
                   <li><i class="bi bi-check2-all"></i> Menciptakan media yang responsif dan bertanggung jawab antara penjual dan pembeli buku. </li>
                   <li><i class="bi bi-check2-all"></i> Menjadi perusahaan yang kreatif dan peka sehingga bisa beradaptasi dengan perkembangan pengetahuan dan teknologi. </li>
@@ -300,7 +300,7 @@
                     </div>
                   </div>
                   <div class="col-lg-2 text-center">
-                    <img src="assets/img/testimonials/testi8.jpg" class="img-fluid testimonial-img" alt="">
+                    <img src="assets/img/testimonials/testi7.jpg" class="img-fluid testimonial-img" alt="">
                   </div>
                 </div>
               </div>
