--- a/category.html
+++ b/category.html
@@ -43,8 +43,8 @@
 
       <a href="index.html" class="logo d-flex align-items-center me-auto me-lg-0">
         <!-- Uncomment the line below if you also wish to use an image logo -->
-        <img src="assets/img/logolovebook1.png" alt="">
-        <h1>Lovebook<span>.</span></h1>
+        <img src="assets/img/logolovebookFIX.png" alt="">
+        <h1 class="navbar">Lovebook<span>.</span></h1>
       </a>
 
       <nav id="navbar" class="navbar">
@@ -111,8 +111,8 @@
                   </li>
                 </ul>
                 <form class="d-flex" role="search">
-                  <input class="form-control me-2" type="search" placeholder="Cari buku" aria-label="Search">
-                  <button class="btn btn-outline-danger" type="submit">Cari</button>
+                  <input class="form-control me-2 rounded-pill" type="search" placeholder="Cari buku" aria-label="Search">
+                  <button class="btn btn-outline-danger rounded-pill" type="submit">Cari</button>
                 </form>
               </div>
             </div>
@@ -140,8 +140,8 @@
                   </small>
                   <h5 class="card-title"><a href="#">Alice’s Adventures in Wonderland </a></h5>
                   <p class="card-text fs-4"><b>Rp. 60.000,-</b><a href="#"><i class="bi bi-heart fs-5 ms-3"></i></a></p>
-                  <button type="button" class="btn btn-danger"><i class="bi bi-cart4 me-2"></i>Beli</button>
-                  <button type="button" class="btn btn-outline-danger">Detail</button>
+                  <button type="button" class="btn btn-danger rounded-pill"><i class="bi bi-cart4 me-2"></i>Beli </button>
+                  <button type="button" class="btn btn-outline-danger rounded-pill">Detail</button>
                 </div>
               </div>
             </div>
@@ -154,8 +154,8 @@
                   </small>
                   <h5 class="card-title"><a href="#">Atomic Habits</a></h5><br>
                   <p class="card-text fs-4"><b>Rp. 80.000,-</b><a href="#"><i class="bi bi-heart fs-5 ms-3"></i></a></p>
-                  <button type="button" class="btn btn-danger"><i class="bi bi-cart4 me-2"></i>Beli</button>
-                  <button type="button" class="btn btn-outline-danger">Detail</button>
+                  <button type="button" class="btn btn-danger rounded-pill"><i class="bi bi-cart4 me-2"></i>Beli</button>
+                  <button type="button" class="btn btn-outline-danger rounded-pill">Detail</button>
                 </div>
               </div>
             </div>
@@ -168,8 +168,8 @@
                   </small>
                   <h5 class="card-title"><a href="#">Ayahku Bukan Pembohong</a></h5>
                   <p class="card-text fs-4"><b>Rp. 55.000,-</b><a href="#"><i class="bi bi-heart fs-5 ms-3"></i></a></p>
-                  <button type="button" class="btn btn-danger"><i class="bi bi-cart4 me-2"></i>Beli</button>
-                  <button type="button" class="btn btn-outline-danger">Detail</button>
+                  <button type="button" class="btn btn-danger rounded-pill"><i class="bi bi-cart4 me-2"></i>Beli</button>
+                  <button type="button" class="btn btn-outline-danger rounded-pill">Detail</button>
                 </div>
               </div>
             </div>
@@ -182,8 +182,8 @@
                   </small>
                   <h5 class="card-title"><a href="#">Dear Nathan</a></h5><br>
                   <p class="card-text fs-4"><b>Rp. 70.000,-</b><a href="#"><i class="bi bi-heart fs-5 ms-3"></i></a></p>
-                  <button type="button" class="btn btn-danger"><i class="bi bi-cart4 me-2"></i>Beli</button>
-                  <button type="button" class="btn btn-outline-danger">Detail</button>
+                  <button type="button" class="btn btn-danger rounded-pill"><i class="bi bi-cart4 me-2"></i>Beli</button>
+                  <button type="button" class="btn btn-outline-danger rounded-pill">Detail</button>
                 </div>
               </div>
             </div>
@@ -201,8 +201,8 @@
                   </small>
                   <h5 class="card-title"><a href="#">Dear Tomorrow </a></h5><br>
                   <p class="card-text fs-4"><b>Rp. 90.000,-</b><a href="#"><i class="bi bi-heart fs-5 ms-3"></i></a></p>
-                  <button type="button" class="btn btn-danger"><i class="bi bi-cart4 me-2"></i>Beli</button>
-                  <button type="button" class="btn btn-outline-danger">Detail</button>
+                  <button type="button" class="btn btn-danger rounded-pill"><i class="bi bi-cart4 me-2"></i>Beli</button>
+                  <button type="button" class="btn btn-outline-danger rounded-pill">Detail</button>
                 </div>
               </div>
             </div>
@@ -215,8 +215,8 @@
                   </small>
                   <h5 class="card-title"><a href="#">Enola Holmes</a></h5><br>
                   <p class="card-text fs-4"><b>Rp. 80.000,-</b><a href="#"><i class="bi bi-heart fs-5 ms-3"></i></a></p>
-                  <button type="button" class="btn btn-danger"><i class="bi bi-cart4 me-2"></i>Beli</button>
-                  <button type="button" class="btn btn-outline-danger">Detail</button>
+                  <button type="button" class="btn btn-danger rounded-pill"><i class="bi bi-cart4 me-2"></i>Beli</button>
+                  <button type="button" class="btn btn-outline-danger rounded-pill">Detail</button>
                 </div>
               </div>
             </div>
@@ -229,8 +229,8 @@
                   </small>
                   <h5 class="card-title"><a href="#">Habis Gelap Terbtlah Terang</a></h5>
                   <p class="card-text fs-4"><b>Rp. 80.000,-</b><a href="#"><i class="bi bi-heart fs-5 ms-3"></i></a></p>
-                  <button type="button" class="btn btn-danger"><i class="bi bi-cart4 me-2"></i>Beli</button>
-                  <button type="button" class="btn btn-outline-danger">Detail</button>
+                  <button type="button" class="btn btn-danger rounded-pill"><i class="bi bi-cart4 me-2"></i>Beli</button>
+                  <button type="button" class="btn btn-outline-danger rounded-pill">Detail</button>
                 </div>
               </div>
             </div>
@@ -243,8 +243,8 @@
                   </small>
                   <h5 class="card-title"><a href="#">How To Respect Myself</a></h5>
                   <p class="card-text fs-4"><b>Rp. 70.000,-</b><a href="#"><i class="bi bi-heart fs-5 ms-3"></i></a></p>
-                  <button type="button" class="btn btn-danger"><i class="bi bi-cart4 me-2"></i>Beli</button>
-                  <button type="button" class="btn btn-outline-danger">Detail</button>
+                  <button type="button" class="btn btn-danger rounded-pill"><i class="bi bi-cart4 me-2"></i>Beli</button>
+                  <button type="button" class="btn btn-outline-danger rounded-pill">Detail</button>
                 </div>
               </div>
             </div>
@@ -262,8 +262,8 @@
                   </small>
                   <h5 class="card-title"><a href="#">How To Win Friends & Influence People</a></h5>
                   <p class="card-text fs-4"><b>Rp. 80.000,-</b><a href="#"><i class="bi bi-heart fs-5 ms-3"></i></a></p>
-                  <button type="button" class="btn btn-danger"><i class="bi bi-cart4 me-2"></i>Beli</button>
-                  <button type="button" class="btn btn-outline-danger">Detail</button>
+                  <button type="button" class="btn btn-danger rounded-pill"><i class="bi bi-cart4 me-2"></i>Beli</button>
+                  <button type="button" class="btn btn-outline-danger rounded-pill">Detail</button>
                 </div>
               </div>
             </div>
@@ -276,8 +276,8 @@
                   </small>
                   <h5 class="card-title"><a href="#">Jika Kita Tak Pernah Jadi Apa-apa</a></h5>
                   <p class="card-text fs-4"><b>Rp. 65.000,-</b><a href="#"><i class="bi bi-heart fs-5 ms-3"></i></a></p>
-                  <button type="button" class="btn btn-danger"><i class="bi bi-cart4 me-2"></i>Beli</button>
-                  <button type="button" class="btn btn-outline-danger">Detail</button>
+                  <button type="button" class="btn btn-danger rounded-pill"><i class="bi bi-cart4 me-2"></i>Beli</button>
+                  <button type="button" class="btn btn-outline-danger rounded-pill">Detail</button>
                 </div>
               </div>
             </div>
@@ -290,8 +290,8 @@
                   </small>
                   <h5 class="card-title"><a href="#">Kata</a></h5><br>
                   <p class="card-text fs-4"><b>Rp. 75.000,-</b><a href="#"><i class="bi bi-heart fs-5 ms-3"></i></a></p>
-                  <button type="button" class="btn btn-danger"><i class="bi bi-cart4 me-2"></i>Beli</button>
-                  <button type="button" class="btn btn-outline-danger">Detail</button>
+                  <button type="button" class="btn btn-danger rounded-pill"><i class="bi bi-cart4 me-2"></i>Beli</button>
+                  <button type="button" class="btn btn-outline-danger rounded-pill">Detail</button>
                 </div>
               </div>
             </div>
@@ -304,8 +304,8 @@
                   </small>
                   <h5 class="card-title"><a href="#">Limitless</a></h5><br>
                   <p class="card-text fs-4"><b>Rp. 80.000,-</b><a href="#"><i class="bi bi-heart fs-5 ms-3"></i></a></p>
-                  <button type="button" class="btn btn-danger"><i class="bi bi-cart4 me-2"></i>Beli</button>
-                  <button type="button" class="btn btn-outline-danger">Detail</button>
+                  <button type="button" class="btn btn-danger rounded-pill"><i class="bi bi-cart4 me-2"></i>Beli</button>
+                  <button type="button" class="btn btn-outline-danger rounded-pill">Detail</button>
                 </div>
               </div>
             </div>
@@ -323,8 +323,8 @@
                   </small>
                   <h5 class="card-title"><a href="#">Little Women & Good Wives</a></h5>
                   <p class="card-text fs-4"><b>Rp. 80.000,-</b><a href="#"><i class="bi bi-heart fs-5 ms-3"></i></a></p>
-                  <button type="button" class="btn btn-danger"><i class="bi bi-cart4 me-2"></i>Beli</button>
-                  <button type="button" class="btn btn-outline-danger">Detail</button>
+                  <button type="button" class="btn btn-danger rounded-pill"><i class="bi bi-cart4 me-2"></i>Beli</button>
+                  <button type="button" class="btn btn-outline-danger rounded-pill">Detail</button>
                 </div>
               </div>
             </div>
@@ -337,8 +337,8 @@
                   </small>
                   <h5 class="card-title"><a href="#">Mahatma Gandhi</a></h5><br>
                   <p class="card-text fs-4"><b>Rp. 90.000,-</b><a href="#"><i class="bi bi-heart fs-5 ms-3"></i></a></p>
-                  <button type="button" class="btn btn-danger"><i class="bi bi-cart4 me-2"></i>Beli</button>
-                  <button type="button" class="btn btn-outline-danger">Detail</button>
+                  <button type="button" class="btn btn-danger rounded-pill"><i class="bi bi-cart4 me-2"></i>Beli</button>
+                  <button type="button" class="btn btn-outline-danger rounded-pill">Detail</button>
                 </div>
               </div>
             </div>
@@ -351,8 +351,8 @@
                   </small>
                   <h5 class="card-title"><a href="#">Mariposa</a></h5><br>
                   <p class="card-text fs-4"><b>Rp. 70.000,-</b><a href="#"><i class="bi bi-heart fs-5 ms-3"></i></a></p>
-                  <button type="button" class="btn btn-danger"><i class="bi bi-cart4 me-2"></i>Beli</button>
-                  <button type="button" class="btn btn-outline-danger">Detail</button>
+                  <button type="button" class="btn btn-danger rounded-pill"><i class="bi bi-cart4 me-2"></i>Beli</button>
+                  <button type="button" class="btn btn-outline-danger rounded-pill">Detail</button>
                 </div>
               </div>
             </div>
@@ -365,8 +365,8 @@
                   </small>
                   <h5 class="card-title"><a href="#">Mohammad Hatta</a></h5><br>
                   <p class="card-text fs-4"><b>Rp. 90.000,-</b><a href="#"><i class="bi bi-heart fs-5 ms-3"></i></a></p>
-                  <button type="button" class="btn btn-danger"><i class="bi bi-cart4 me-2"></i>Beli</button>
-                  <button type="button" class="btn btn-outline-danger">Detail</button>
+                  <button type="button" class="btn btn-danger rounded-pill"><i class="bi bi-cart4 me-2"></i>Beli</button>
+                  <button type="button" class="btn btn-outline-danger rounded-pill">Detail</button>
                 </div>
               </div>
             </div>
@@ -384,8 +384,8 @@
                   </small>
                   <h5 class="card-title"><a href="#">Sukarno</a></h5><br>
                   <p class="card-text fs-4"><b>Rp. 90.000,-</b><a href="#"><i class="bi bi-heart fs-5 ms-3"></i></a></p>
-                  <button type="button" class="btn btn-danger"><i class="bi bi-cart4 me-2"></i>Beli</button>
-                  <button type="button" class="btn btn-outline-danger">Detail</button>
+                  <button type="button" class="btn btn-danger rounded-pill"><i class="bi bi-cart4 me-2"></i>Beli</button>
+                  <button type="button" class="btn btn-outline-danger rounded-pill">Detail</button>
                 </div>
               </div>
             </div>
@@ -398,8 +398,8 @@
                   </small>
                   <h5 class="card-title"><a href="#">Teluk Alaska</a></h5><br>
                   <p class="card-text fs-4"><b>Rp. 75.000,-</b><a href="#"><i class="bi bi-heart fs-5 ms-3"></i></a></p>
-                  <button type="button" class="btn btn-danger"><i class="bi bi-cart4 me-2"></i>Beli</button>
-                  <button type="button" class="btn btn-outline-danger">Detail</button>
+                  <button type="button" class="btn btn-danger rounded-pill"><i class="bi bi-cart4 me-2"></i>Beli</button>
+                  <button type="button" class="btn btn-outline-danger rounded-pill">Detail</button>
                 </div>
               </div>
             </div>
@@ -412,8 +412,8 @@
                   </small>
                   <h5 class="card-title"><a href="#">Tenggelamnya Kapal Van Der Wijck</a></h5>
                   <p class="card-text fs-4"><b>Rp. 85.000,-</b><a href="#"><i class="bi bi-heart fs-5 ms-3"></i></a></p>
-                  <button type="button" class="btn btn-danger"><i class="bi bi-cart4 me-2"></i>Beli</button>
-                  <button type="button" class="btn btn-outline-danger">Detail</button>
+                  <button type="button" class="btn btn-danger rounded-pill"><i class="bi bi-cart4 me-2"></i>Beli</button>
+                  <button type="button" class="btn btn-outline-danger rounded-pill">Detail</button>
                 </div>
               </div>
             </div>
@@ -426,8 +426,8 @@
                   </small>
                   <h5 class="card-title"><a href="#">Tentang Kamu</a></h5><br>
                   <p class="card-text fs-4"><b>Rp. 80.000,-</b><a href="#"><i class="bi bi-heart fs-5 ms-3"></i></a></p>
-                  <button type="button" class="btn btn-danger"><i class="bi bi-cart4 me-2"></i>Beli</button>
-                  <button type="button" class="btn btn-outline-danger">Detail</button>
+                  <button type="button" class="btn btn-danger rounded-pill"><i class="bi bi-cart4 me-2"></i>Beli</button>
+                  <button type="button" class="btn btn-outline-danger rounded-pill">Detail</button>
                 </div>
               </div>
             </div>
