--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 
       <a href="index.html" class="logo d-flex align-items-center me-auto me-lg-0">
         <!-- Uncomment the line below if you also wish to use an image logo -->
-        <img src="assets/img/logolovebook1.png" alt="">
-        <h1>Lovebook<span>.</span></h1>
+        <img src="assets/img/logolovebookFIX.png" alt="">
+        <h1 class="navbar">Lovebook<span>.</span></h1>
       </a>
 
       <nav id="navbar" class="navbar">
@@ -98,8 +98,10 @@
       <div class="section-header">
         <h2>Selamat datang di Lovebook</h2>
         <p class="fs-2">Tempat jual-beli buku bekas <span>Berkualitas</span></p>
-        <a href="category.html" class="btn-book-a-table">Lihat semua buku </a>
-        <a href="#book-a-table" class="ms-4">Jual buku anda </a>
+        <a href="category.html" class="btn btn-book-a-table mb-2">Lihat semua buku</a>
+        <a href="#book-a-table" class="shadow-sm ms-2 btn mb-2" style="
+        font-weight: 500; font-size: 14px; letter-spacing: 1px; display: inline-block; 
+        padding: 12px 36px; border-radius: 50px; transition: 0.5s; background-color:white; color:#CE1212">Jual buku</a>
       </div>
       <!-- <div class="row justify-content-between gy-5">
         <div class="col-lg-5 order-2 order-lg-1 d-flex flex-column justify-content-center align-items-center align-items-lg-start text-center text-lg-start">
@@ -157,8 +159,8 @@
               <div class="col-lg-4 menu-item">
                 <a href="assets/img/menu/enola1.png" class="glightbox"><img src="assets/img/menu/enola1.png"
                     class="menu-img img-fluid" alt=""></a>
-                <h4>Enola Holmes & Black Barouche</h4>
-                <p class="description">
+                <h4 style="text-align:center">Enola Holmes & Black Barouche</h4>
+                <p class="description" style="text-align:center">
                   <i>Enola Holmes adalah adik perempuan dari saudara laki-lakinya yang lebih terkenal ...</i> <br><small><a href="#" class="text-muted opacity-50">Lihat Selengkapnya</a></small>
                 </p>
                 <p class="price">
@@ -169,8 +171,8 @@
               <div class="col-lg-4 menu-item">
                 <a href="assets/img/menu/alice.png" class="glightbox"><img src="assets/img/menu/alice.png"
                     class="menu-img img-fluid" alt=""></a>
-                <h4>Alice Adventures in Wonderland</h4>
-                <p class="description">
+                <h4 style="text-align:center">Alice Adventures in Wonderland</h4>
+                <p class="description" style="text-align:center">
                   <i>Alice's Adventures in Wonderland adalah sebuah novel Inggris tahun 1865 oleh Lewis
                     Carroll.</i><br><small><a href="#" class="text-muted opacity-50">Lihat Selengkapnya</a></small>
                 </p>
@@ -182,8 +184,8 @@
               <div class="col-lg-4 menu-item">
                 <a href="assets/img/menu/dearnathan.png" class="glightbox"><img src="assets/img/menu/dearnathan.png"
                     class="menu-img img-fluid" alt=""></a>
-                <h4>Dear Nathan</h4>
-                <p class="description">
+                <h4 style="text-align:center">Dear Nathan</h4>
+                <p class="description" style="text-align:center">
                   <i>Berawal dari terlambat menghadiri upacara pertama di sekolah baru, Salma Alvira <a
                       class="text-muted">...</a></i> <br><small><a href="#" class="text-muted opacity-50">Lihat
                       Selengkapnya</a></small>
@@ -196,8 +198,8 @@
               <div class="col-lg-4 menu-item">
                 <a href="assets/img/menu/limitless.png" class="glightbox"><img src="assets/img/menu/limitless.png"
                     class="menu-img img-fluid" alt=""></a>
-                <h4>Limitless</h4>
-                <p class="description">
+                <h4 style="text-align:center">Limitless</h4>
+                <p class="description" style="text-align:center">
                   <i>Di balik sebuah kesuksesan, selalu ada perjuangan dan lika-liku yang tidak ...</i> <br><small><a href="#" class="text-muted opacity-50">Lihat Selengkapnya</a></small>
                 </p>
                 <p class="price">
@@ -208,9 +210,9 @@
               <div class="col-lg-4 menu-item">
                 <a href="assets/img/menu/littlewoman.png" class="glightbox"><img src="assets/img/menu/littlewoman.png"
                     class="menu-img img-fluid" alt=""></a>
-                <h4>Little Woman and Good Wives</h4>
-                <p class="description">
-                  <i>Kisah petualangan rumah tangga mereka, upaya mereka untuk meningkatkan pendapatan keluarga.</i>
+                <h4 style="text-align:center">Little Woman and Good Wives</h4>
+                <p class="description" style="text-align:center">
+                  <i>Kisah petualangan rumah tangga mereka, upaya mereka untuk meningkatkan ...</i>
                   <br><small><a href="#" class="text-muted opacity-50">Lihat Selengkapnya</a></small>
                 </p>
                 <p class="price">
@@ -221,9 +223,9 @@
               <div class="col-lg-4 menu-item">
                 <a href="assets/img/menu/kata.png" class="glightbox"><img src="assets/img/menu/kata.png"
                     class="menu-img img-fluid" alt=""></a>
-                <h4>Kata</h4>
-                <p class="description">
-                  <i>“Andai bisa sesederhana itu, aku tidak akan pernah mencintaimu sejak awal. Aku tidak akan mengambil
+                <h4 style="text-align:center">Kata</h4>
+                <p class="description" style="text-align:center">
+                  <i>“Andai bisa sesederhana itu, aku tidak akan pernah mencintaimu sejak awal 
                     <a class="text-muted">...</a></i> <br><small><a href="#" class="text-muted opacity-50">Lihat
                       Selengkapnya</a></small>
                 </p>
@@ -246,8 +248,8 @@
               <div class="col-lg-4 menu-item">
                 <a href="assets/img/menu/howtowin.png" class="glightbox"><img src="assets/img/menu/howtowin.png"
                     class="menu-img img-fluid" alt=""></a>
-                <h4>How to Win & Influence People</h4>
-                <p class="description">
+                <h4 style="text-align:center">How to Win & Influence People</h4>
+                <p class="description" style="text-align:center">
                   <i>Anda dapat mengejar pekerjaan yang Anda inginkan dan mendapatkannya!</i> <br><small><a href="#" class="text-muted opacity-50">Lihat
                       Selengkapnya</a></small>
 
@@ -260,8 +262,8 @@
               <div class="col-lg-4 menu-item">
                 <a href="assets/img/menu/sukarno.png" class="glightbox"><img src="assets/img/menu/sukarno.png"
                     class="menu-img img-fluid" alt=""></a>
-                <h4>Sukarno</h4>
-                <p class="description">
+                <h4 style="text-align:center">Sukarno</h4>
+                <p class="description" style="text-align:center">
                   <i>Sukarno adalah sebuah buku yang berisi tentang kisah Soekarno, bapak pendiri republik. </i>
                   <br><small><a href="#" class="text-muted opacity-50">Lihat Selengkapnya</a></small>
                 </p>
@@ -273,8 +275,8 @@
               <div class="col-lg-4 menu-item">
                 <a href="assets/img/menu/atomic1.png" class="glightbox"><img src="assets/img/menu/atomic1.png"
                     class="menu-img img-fluid" alt=""></a>
-                <h4>Atomic Habits</h4>
-                <p class="description">
+                <h4 style="text-align:center">Atomic Habits</h4>
+                <p class="description" style="text-align:center">
                   <i>Orang mengira ketika Anda ingin mengubah hidup, Anda perlu memikirkan hal-hal besar. </i>
                   <br><small><a href="#" class="text-muted opacity-50">Lihat Selengkapnya</a></small>
                 </p>
@@ -286,8 +288,8 @@
               <div class="col-lg-4 menu-item">
                 <a href="assets/img/menu/deartommorow.png" class="glightbox"><img src="assets/img/menu/deartommorow.png"
                     class="menu-img img-fluid" alt=""></a>
-                <h4>Dear Tomorrow</h4>
-                <p class="description">
+                <h4 style="text-align:center">Dear Tomorrow</h4>
+                <p class="description" style="text-align:center">
                   <i>Buku ini adalah kumpulan pengalaman, pemikiran, dan percakapan tentang <a
                       class="text-muted">...</a></i> <br><small><a href="#" class="text-muted opacity-50">Lihat
                       Selengkapnya</a></small>
@@ -301,8 +303,8 @@
               <div class="col-lg-4 menu-item">
                 <a href="assets/img/menu/howtorespect.png" class="glightbox"><img src="assets/img/menu/howtorespect.png"
                     class="menu-img img-fluid" alt=""></a>
-                <h4>How to Respect Myself</h4>
-                <p class="description">
+                <h4 style="text-align:center">How to Respect Myself</h4>
+                <p class="description style="text-align:center"">
                   <i>Bagaimana anda menjaga dan mencintai diri sendiri? Metode pelatihan mandiri untuk <a
                       class="text-muted">...</a></i> <br><small><a href="#" class="text-muted opacity-50">Lihat
                       Selengkapnya</a></small>
@@ -316,8 +318,8 @@
               <div class="col-lg-4 menu-item">
                 <a href="assets/img/menu/seniberbicara.png" class="glightbox"><img
                     src="assets/img/menu/seniberbicara.png" class="menu-img img-fluid" alt=""></a>
-                <h4>Seni Berbicara yang Baik</h4>
-                <p class="description">
+                <h4 style="text-align:center">Seni Berbicara yang Baik</h4>
+                <p class="description" style="text-align:center">
                   <i>Tidak ada orang yang tidak bisa diajak bicara bila kita memiliki sifat yang tepat.</i>
                   <br><small><a href="#" class="text-muted opacity-50">Lihat Selengkapnya</a></small>
 
@@ -472,7 +474,7 @@
         <div class="section-header">
           <h2>Ingin jual buku anda?</h2>
           <p>Gabung <span>Bersama Kami</span> Sekarang!</p>
-          <button type="button" class="btn btn-danger">Klik disini</button>
+          <button type="button" class="btn mt-3 shadow" style="font-weight: 500; font-size: 14px; letter-spacing: 1px; display: inline-block; padding: 12px 36px; border-radius: 50px; transition: 0.5s; background-color:#CE1212; color:white">Klik disini</button>
         </div>
 
         <!-- <div class="row g-0">
