--- a/profile.html
+++ b/profile.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>About Us</title>
+  <title>Lovebook</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -43,8 +43,8 @@
 
       <a href="index.html" class="logo d-flex align-items-center me-auto me-lg-0">
         <!-- Uncomment the line below if you also wish to use an image logo -->
-        <img src="assets/img/logolovebook1.png" alt="">
-        <h1>Lovebook<span>.</span></h1>
+        <img src="assets/img/logolovebookFIX.png" alt="">
+        <h1 class="navbar">Lovebook<span>.</span></h1>
       </a>
 
       <nav id="navbar" class="navbar">
@@ -77,10 +77,10 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <h2>Sample Inner Page</h2>
+          <h2>Profil</h2>
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li>Sample Inner Page</li>
+            <li>Profil</li>
           </ol>
         </div>
 
@@ -88,12 +88,109 @@
     </div><!-- End Breadcrumbs -->
 
     <section class="sample-page">
-      <div class="container" data-aos="fade-up">
+      <div class="container">
+        <div class="container-xl px-4" data-aos="fade-up">
+          <!-- Account page navigation-->
+          <nav class="nav nav-borders shadow-none p-3 bg-light rounded">
+              <a class="nav-link ms-0 btn btn-danger rounded-pill" style="color:white">Biodata Diri</a>
+              <a class="nav-link" href="#" style="color:#CE1212">Daftar Alamat</a>
+              <a class="nav-link" href="#" style="color:#CE1212">Produk Saya</a>
+              <a class="nav-link" href="#" style="color:#CE1212">Pembayaran</a>
+          </nav>
+          <hr class="mt-0 mb-4">
+          <div class="row">
+              <div class="col-xl-4">
+                  <!-- Profile picture card-->
+                  <div class="card mb-4 mb-xl-0 shadow-sm">
+                      <div class="card-header">Foto Profil</div>
+                      <div class="card-body text-center">
+                          <!-- Profile picture image-->
+                          <div class="card rounded-circle">
+                            <img class="img-account-profile rounded-circle" src="assets/img/chefs/Utsman.jpg" alt="">
+                          </div>
+                          
+                          <!-- Profile picture help block-->
+                          <div class="small font-italic text-muted mt-3 mb-2">JPG atau PNG kurang dari 5 MB</div>
+                          <!-- Profile picture upload button-->
+                          <button class="btn btn-outline-danger rounded-pill" type="button">Pilih Foto</button>
+                      </div>
+                  </div>
+              </div>
+              <div class="col-xl-8">
+                  <!-- Account details card-->
+                  <div class="card mb-4 shadow-sm">
+                      <div class="card-header">Detail Akun</div>
+                      <div class="card-body">
+                          <form>
+                              <!-- Form Group (username)-->
+                              <div class="mb-3">
+                                  <h5>Biodata Diri</h5>
+                                  <hr>
+                              </div>
+                              <!-- Form Row-->
+                              <div class="row gx-3 mb-3">
+                                  <div class="col-md-3">
+                                      <p class="text-muted">Nama</p>
+                                  </div>
+                                  <div class="col-md-6">
+                                      <p>Utsman Abdurrahman</p>
+                                  </div>
+                              </div>
 
-        <p>
-          You can duplicate this sample page and create any number of inner pages you like!
-        </p>
+                               <!-- Form Row-->
+                              <div class="row gx-3 mb-3">
+                                  <div class="col-md-3">
+                                      <p class="text-muted">Tanggal Lahir</p>
+                                  </div>
+                                  <div class="col-md-6">
+                                      <p>7 September 2002</p>
+                                  </div>
+                              </div>
 
+                              <!-- Form Group (username)-->
+                              <div class="mb-3">
+                                <h5>Kontak</h5>
+                                <hr>
+                            </div>
+
+                              <!-- Form Row-->
+                              <div class="row gx-3 mb-3">
+                                <div class="col-md-3">
+                                    <p class="text-muted">Jenis Kelamin</p>
+                                </div>
+                                <div class="col-md-6">
+                                    <p>Pria</p>
+                                </div>
+                            </div>
+
+                              <!-- Form Row-->
+                              <div class="row gx-3 mb-3">
+                                  <div class="col-md-3">
+                                      <p class="text-muted">Email</p>
+                                  </div>
+                                  <div class="col-md-6">
+                                      <p>utsman@lovebook.com</p>
+                                  </div>
+                              </div>
+
+                              <!-- Form Row-->
+                              <div class="row gx-3 mb-3">
+                                <div class="col-md-3">
+                                    <p class="text-muted">Nomor HP</p>
+                                </div>
+                                <div class="col-md-6">
+                                    <p>08888111223</p>
+                                </div>
+                            </div>
+
+                              <!-- Save changes button-->
+                              <button class="btn btn-danger rounded-pill" type="button">Edit Profil</button>
+                          </form>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </div>
       </div>
     </section>
 
