--- a/cart.html
+++ b/cart.html
@@ -42,8 +42,8 @@
 
       <a href="index.html" class="logo d-flex align-items-center me-auto me-lg-0">
         <!-- Uncomment the line below if you also wish to use an image logo -->
-        <img src="assets/img/logolovebook1.png" alt="">
-        <h1>Lovebook<span>.</span></h1>
+        <img src="assets/img/logolovebookFIX.png" alt="">
+        <h1 class="navbar">Lovebook<span>.</span></h1>
       </a>
 
       <nav id="navbar" class="navbar">
@@ -93,7 +93,7 @@
             <p class="card-text">Total Harga (2 Produk)</p>
             <hr>
             <h4 class="card-title">Rp. 170.000,-</h4>
-            <a href="#" class="btn btn-light mt-3 d-grid gap-2">Beli</a>
+            <a href="#" class="btn btn-light mt-3 d-grid gap-2 rounded-pill">Beli</a>
           </div>
         </div>
       </div>
