--- a/category-fiction.html
+++ b/category-fiction.html
@@ -43,8 +43,8 @@
 
             <a href="index.html" class="logo d-flex align-items-center me-auto me-lg-0">
                 <!-- Uncomment the line below if you also wish to use an image logo -->
-                <img src="assets/img/logolovebook1.png" alt="">
-                <h1>Lovebook<span>.</span></h1>
+                <img src="assets/img/logolovebookFIX.png" alt="">
+                <h1 class="navbar">Lovebook<span>.</span></h1>
             </a>
 
             <nav id="navbar" class="navbar">
@@ -111,9 +111,9 @@
                                     </li>
                                 </ul>
                                 <form class="d-flex" role="search">
-                                    <input class="form-control me-2" type="search" placeholder="Cari buku"
+                                    <input class="form-control me-2 rounded-pill" type="search" placeholder="Cari buku"
                                         aria-label="Search">
-                                    <button class="btn btn-outline-danger" type="submit">Cari</button>
+                                    <button class="btn btn-outline-danger rounded-pill" type="submit">Cari</button>
                                 </form>
                             </div>
                         </div>
@@ -142,9 +142,9 @@
                                     <h5 class="card-title"><a href="#">Alice’s Adventures in Wonderland </a></h5>
                                     <p class="card-text fs-4"><b>Rp. 60.000,-</b><a href="#"><i
                                                 class="bi bi-heart fs-5 ms-3"></i></a></p>
-                                    <button type="button" class="btn btn-danger"><i
+                                    <button type="button" class="btn btn-danger rounded-pill"><i
                                             class="bi bi-cart4 me-2"></i>Beli</button>
-                                    <button type="button" class="btn btn-outline-danger">Detail</button>
+                                    <button type="button" class="btn btn-outline-danger rounded-pill">Detail</button>
                                 </div>
                             </div>
                         </div>
@@ -158,9 +158,9 @@
                                     <h5 class="card-title"><a href="#">Ayahku Bukan Pembohong</a></h5>
                                     <p class="card-text fs-4"><b>Rp. 55.000,-</b><a href="#"><i
                                                 class="bi bi-heart fs-5 ms-3"></i></a></p>
-                                    <button type="button" class="btn btn-danger"><i
+                                    <button type="button" class="btn btn-danger rounded-pill"><i
                                             class="bi bi-cart4 me-2"></i>Beli</button>
-                                    <button type="button" class="btn btn-outline-danger">Detail</button>
+                                    <button type="button" class="btn btn-outline-danger rounded-pill">Detail</button>
                                 </div>
                             </div>
                         </div>
@@ -174,9 +174,9 @@
                                     <h5 class="card-title"><a href="#">Dear Nathan</a></h5><br>
                                     <p class="card-text fs-4"><b>Rp. 70.000,-</b><a href="#"><i
                                                 class="bi bi-heart fs-5 ms-3"></i></a></p>
-                                    <button type="button" class="btn btn-danger"><i
+                                    <button type="button" class="btn btn-danger rounded-pill"><i
                                             class="bi bi-cart4 me-2"></i>Beli</button>
-                                    <button type="button" class="btn btn-outline-danger">Detail</button>
+                                    <button type="button" class="btn btn-outline-danger rounded-pill">Detail</button>
                                 </div>
                             </div>
                         </div>
@@ -190,9 +190,9 @@
                                     <h5 class="card-title"><a href="#">Enola Holmes</a></h5><br>
                                     <p class="card-text fs-4"><b>Rp. 80.000,-</b><a href="#"><i
                                                 class="bi bi-heart fs-5 ms-3"></i></a></p>
-                                    <button type="button" class="btn btn-danger"><i
+                                    <button type="button" class="btn btn-danger rounded-pill"><i
                                             class="bi bi-cart4 me-2"></i>Beli</button>
-                                    <button type="button" class="btn btn-outline-danger">Detail</button>
+                                    <button type="button" class="btn btn-outline-danger rounded-pill">Detail</button>
                                 </div>
                             </div>
                         </div>
@@ -211,9 +211,9 @@
                                     <h5 class="card-title"><a href="#">Kata</a></h5><br>
                                     <p class="card-text fs-4"><b>Rp. 75.000,-</b><a href="#"><i
                                                 class="bi bi-heart fs-5 ms-3"></i></a></p>
-                                    <button type="button" class="btn btn-danger"><i
+                                    <button type="button" class="btn btn-danger rounded-pill"><i
                                             class="bi bi-cart4 me-2"></i>Beli</button>
-                                    <button type="button" class="btn btn-outline-danger">Detail</button>
+                                    <button type="button" class="btn btn-outline-danger rounded-pill">Detail</button>
                                 </div>
                             </div>
                         </div>
@@ -228,9 +228,9 @@
                                     <h5 class="card-title"><a href="#">Little Women & Good Wives</a></h5>
                                     <p class="card-text fs-4"><b>Rp. 80.000,-</b><a href="#"><i
                                                 class="bi bi-heart fs-5 ms-3"></i></a></p>
-                                    <button type="button" class="btn btn-danger"><i
+                                    <button type="button" class="btn btn-danger rounded-pill"><i
                                             class="bi bi-cart4 me-2"></i>Beli</button>
-                                    <button type="button" class="btn btn-outline-danger">Detail</button>
+                                    <button type="button" class="btn btn-outline-danger rounded-pill">Detail</button>
                                 </div>
                             </div>
                         </div>
@@ -244,9 +244,9 @@
                                     <h5 class="card-title"><a href="#">Mariposa</a></h5><br>
                                     <p class="card-text fs-4"><b>Rp. 70.000,-</b><a href="#"><i
                                                 class="bi bi-heart fs-5 ms-3"></i></a></p>
-                                    <button type="button" class="btn btn-danger"><i
+                                    <button type="button" class="btn btn-danger rounded-pill"><i
                                             class="bi bi-cart4 me-2"></i>Beli</button>
-                                    <button type="button" class="btn btn-outline-danger">Detail</button>
+                                    <button type="button" class="btn btn-outline-danger rounded-pill">Detail</button>
                                 </div>
                             </div>
                         </div>
@@ -260,9 +260,9 @@
                                     <h5 class="card-title"><a href="#">Teluk Alaska</a></h5><br>
                                     <p class="card-text fs-4"><b>Rp. 75.000,-</b><a href="#"><i
                                                 class="bi bi-heart fs-5 ms-3"></i></a></p>
-                                    <button type="button" class="btn btn-danger"><i
+                                    <button type="button" class="btn btn-danger rounded-pill"><i
                                             class="bi bi-cart4 me-2"></i>Beli</button>
-                                    <button type="button" class="btn btn-outline-danger">Detail</button>
+                                    <button type="button" class="btn btn-outline-danger rounded-pill">Detail</button>
                                 </div>
                             </div>
                         </div>
@@ -281,9 +281,9 @@
                                     <h5 class="card-title"><a href="#">Tenggelamnya Kapal Van Der Wijck</a></h5>
                                     <p class="card-text fs-4"><b>Rp. 85.000,-</b><a href="#"><i
                                                 class="bi bi-heart fs-5 ms-3"></i></a></p>
-                                    <button type="button" class="btn btn-danger"><i
+                                    <button type="button" class="btn btn-danger rounded-pill"><i
                                             class="bi bi-cart4 me-2"></i>Beli</button>
-                                    <button type="button" class="btn btn-outline-danger">Detail</button>
+                                    <button type="button" class="btn btn-outline-danger rounded-pill">Detail</button>
                                 </div>
                             </div>
                         </div>
@@ -297,9 +297,9 @@
                                     <h5 class="card-title"><a href="#">Tentang Kamu</a></h5>
                                     <p class="card-text fs-4"><b>Rp. 80.000,-</b><a href="#"><i
                                                 class="bi bi-heart fs-5 ms-3"></i></a></p>
-                                    <button type="button" class="btn btn-danger"><i
+                                    <button type="button" class="btn btn-danger rounded-pill"><i
                                             class="bi bi-cart4 me-2"></i>Beli</button>
-                                    <button type="button" class="btn btn-outline-danger">Detail</button>
+                                    <button type="button" class="btn btn-outline-danger rounded-pill">Detail</button>
                                 </div>
                             </div>
                         </div>
