--- a/category-nonfiction.html
+++ b/category-nonfiction.html
@@ -43,8 +43,8 @@
 
             <a href="index.html" class="logo d-flex align-items-center me-auto me-lg-0">
                 <!-- Uncomment the line below if you also wish to use an image logo -->
-                <img src="assets/img/logolovebook1.png" alt="">
-                <h1>Lovebook<span>.</span></h1>
+                <img src="assets/img/logolovebookFIX.png" alt="">
+                <h1 class="navbar">Lovebook<span>.</span></h1>
             </a>
 
             <nav id="navbar" class="navbar">
@@ -112,9 +112,9 @@
                                     </li>
                                 </ul>
                                 <form class="d-flex" role="search">
-                                    <input class="form-control me-2" type="search" placeholder="Cari buku"
+                                    <input class="form-control me-2 rounded-pill" type="search" placeholder="Cari buku"
                                         aria-label="Search">
-                                    <button class="btn btn-outline-danger" type="submit">Cari</button>
+                                    <button class="btn btn-outline-danger rounded-pill" type="submit">Cari</button>
                                 </form>
                             </div>
                         </div>
@@ -143,9 +143,9 @@
                                     <h5 class="card-title"><a href="#">Atomic Habits</a></h5><br>
                                     <p class="card-text fs-4"><b>Rp. 80.000,-</b><a href="#"><i
                                                 class="bi bi-heart fs-5 ms-3"></i></a></p>
-                                    <button type="button" class="btn btn-danger"><i
+                                    <button type="button" class="btn btn-danger rounded-pill"><i
                                             class="bi bi-cart4 me-2"></i>Beli</button>
-                                    <button type="button" class="btn btn-outline-danger">Detail</button>
+                                    <button type="button" class="btn btn-outline-danger rounded-pill">Detail</button>
                                 </div>
                             </div>
                         </div>
@@ -160,9 +160,9 @@
                                     <h5 class="card-title"><a href="#">Dear Tomorrow </a></h5><br>
                                     <p class="card-text fs-4"><b>Rp. 90.000,-</b><a href="#"><i
                                                 class="bi bi-heart fs-5 ms-3"></i></a></p>
-                                    <button type="button" class="btn btn-danger"><i
+                                    <button type="button" class="btn btn-danger rounded-pill"><i
                                             class="bi bi-cart4 me-2"></i>Beli</button>
-                                    <button type="button" class="btn btn-outline-danger">Detail</button>
+                                    <button type="button" class="btn btn-outline-danger rounded-pill">Detail</button>
                                 </div>
                             </div>
                         </div>
@@ -176,9 +176,9 @@
                                     <h5 class="card-title"><a href="#">Habis Gelap Terbtlah Terang</a></h5>
                                     <p class="card-text fs-4"><b>Rp. 80.000,-</b><a href="#"><i
                                                 class="bi bi-heart fs-5 ms-3"></i></a></p>
-                                    <button type="button" class="btn btn-danger"><i
+                                    <button type="button" class="btn btn-danger rounded-pill"><i
                                             class="bi bi-cart4 me-2"></i>Beli</button>
-                                    <button type="button" class="btn btn-outline-danger">Detail</button>
+                                    <button type="button" class="btn btn-outline-danger rounded-pill">Detail</button>
                                 </div>
                             </div>
                         </div>
@@ -193,9 +193,9 @@
                                     <h5 class="card-title"><a href="#">How To Respect Myself</a></h5>
                                     <p class="card-text fs-4"><b>Rp. 70.000,-</b><a href="#"><i
                                                 class="bi bi-heart fs-5 ms-3"></i></a></p>
-                                    <button type="button" class="btn btn-danger"><i
+                                    <button type="button" class="btn btn-danger rounded-pill"><i
                                             class="bi bi-cart4 me-2"></i>Beli</button>
-                                    <button type="button" class="btn btn-outline-danger">Detail</button>
+                                    <button type="button" class="btn btn-outline-danger rounded-pill">Detail</button>
                                 </div>
                             </div>
                         </div>
@@ -214,9 +214,9 @@
                                     <h5 class="card-title"><a href="#">How To Win Friends & Influence People</a></h5>
                                     <p class="card-text fs-4"><b>Rp. 80.000,-</b><a href="#"><i
                                                 class="bi bi-heart fs-5 ms-3"></i></a></p>
-                                    <button type="button" class="btn btn-danger"><i
+                                    <button type="button" class="btn btn-danger rounded-pill"><i
                                             class="bi bi-cart4 me-2"></i>Beli</button>
-                                    <button type="button" class="btn btn-outline-danger">Detail</button>
+                                    <button type="button" class="btn btn-outline-danger rounded-pill">Detail</button>
                                 </div>
                             </div>
                         </div>
@@ -231,9 +231,9 @@
                                     <h5 class="card-title"><a href="#">Jika Kita Tak Pernah Jadi Apa-apa</a></h5>
                                     <p class="card-text fs-4"><b>Rp. 65.000,-</b><a href="#"><i
                                                 class="bi bi-heart fs-5 ms-3"></i></a></p>
-                                    <button type="button" class="btn btn-danger"><i
+                                    <button type="button" class="btn btn-danger rounded-pill"><i
                                             class="bi bi-cart4 me-2"></i>Beli</button>
-                                    <button type="button" class="btn btn-outline-danger">Detail</button>
+                                    <button type="button" class="btn btn-outline-danger rounded-pill">Detail</button>
                                 </div>
                             </div>
                         </div>
@@ -247,9 +247,9 @@
                                     <h5 class="card-title"><a href="#">Limitless</a></h5><br>
                                     <p class="card-text fs-4"><b>Rp. 80.000,-</b><a href="#"><i
                                                 class="bi bi-heart fs-5 ms-3"></i></a></p>
-                                    <button type="button" class="btn btn-danger"><i
+                                    <button type="button" class="btn btn-danger rounded-pill"><i
                                             class="bi bi-cart4 me-2"></i>Beli</button>
-                                    <button type="button" class="btn btn-outline-danger">Detail</button>
+                                    <button type="button" class="btn btn-outline-danger rounded-pill">Detail</button>
                                 </div>
                             </div>
                         </div>
@@ -263,9 +263,9 @@
                                     <h5 class="card-title"><a href="#">Mahatma Gandhi</a></h5><br>
                                     <p class="card-text fs-4"><b>Rp. 90.000,-</b><a href="#"><i
                                                 class="bi bi-heart fs-5 ms-3"></i></a></p>
-                                    <button type="button" class="btn btn-danger"><i
+                                    <button type="button" class="btn btn-danger rounded-pill"><i
                                             class="bi bi-cart4 me-2"></i>Beli</button>
-                                    <button type="button" class="btn btn-outline-danger">Detail</button>
+                                    <button type="button" class="btn btn-outline-danger rounded-pill">Detail</button>
                                 </div>
                             </div>
                         </div>
@@ -284,9 +284,9 @@
                                     <h5 class="card-title"><a href="#">Mohammad Hatta</a></h5><br>
                                     <p class="card-text fs-4"><b>Rp. 90.000,-</b><a href="#"><i
                                                 class="bi bi-heart fs-5 ms-3"></i></a></p>
-                                    <button type="button" class="btn btn-danger"><i
+                                    <button type="button" class="btn btn-danger rounded-pill"><i
                                             class="bi bi-cart4 me-2"></i>Beli</button>
-                                    <button type="button" class="btn btn-outline-danger">Detail</button>
+                                    <button type="button" class="btn btn-outline-danger rounded-pill">Detail</button>
                                 </div>
                             </div>
                         </div>
@@ -300,9 +300,9 @@
                                     <h5 class="card-title"><a href="#">Sukarno</a></h5><br>
                                     <p class="card-text fs-4"><b>Rp. 90.000,-</b><a href="#"><i
                                                 class="bi bi-heart fs-5 ms-3"></i></a></p>
-                                    <button type="button" class="btn btn-danger"><i
+                                    <button type="button" class="btn btn-danger rounded-pill"><i
                                             class="bi bi-cart4 me-2"></i>Beli</button>
-                                    <button type="button" class="btn btn-outline-danger">Detail</button>
+                                    <button type="button" class="btn btn-outline-danger rounded-pill">Detail</button>
                                 </div>
                             </div>
                         </div>
