--- a/login.html
+++ b/login.html
@@ -43,10 +43,9 @@
 
       <a href="index.html" class="logo d-flex align-items-center me-auto me-lg-0">
         <!-- Uncomment the line below if you also wish to use an image logo -->
-        <img src="assets/img/logolovebook1.png" alt="">
-        <h1>Lovebook<span>.</span></h1>
+        <img src="assets/img/logolovebookFIX.png" alt="">
+        <h1 class="navbar">Lovebook<span>.</span></h1>
       </a>
-
       <nav id="navbar" class="navbar">
         <ul>
           <li><a href="index.html">Beranda</a></li>
