--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <h2>Selamat datang di Lovebook</h2>
         <p class="fs-2">Tempat jual-beli buku bekas <span>Berkualitas</span></p>
         <a href="category.html" class="btn btn-book-a-table mb-2">Lihat semua buku</a>
-        <a href="#book-a-table" class="shadow-sm ms-2 btn mb-2" style="
+        <a href="bookup.html" class="shadow-sm ms-2 btn mb-2" style="
         font-weight: 500; font-size: 14px; letter-spacing: 1px; display: inline-block; 
         padding: 12px 36px; border-radius: 50px; transition: 0.5s; background-color:white; color:#CE1212">Jual buku</a>
       </div>
@@ -221,12 +221,12 @@
               </div><!-- Menu Item -->
 
               <div class="col-lg-4 menu-item">
-                <a href="assets/img/menu/kata.png" class="glightbox"><img src="assets/img/menu/kata.png"
+                <a href="books/kata.html" class="glightbox"><img src="assets/img/menu/kata.png"
                     class="menu-img img-fluid" alt=""></a>
                 <h4 style="text-align:center">Kata</h4>
                 <p class="description" style="text-align:center">
                   <i>“Andai bisa sesederhana itu, aku tidak akan pernah mencintaimu sejak awal 
-                    <a class="text-muted">...</a></i> <br><small><a href="#" class="text-muted opacity-50">Lihat
+                    <a class="text-muted">...</a></i> <br><small><a href="books/kata.html" class="text-muted opacity-50">Lihat
                       Selengkapnya</a></small>
                 </p>
                 <p class="price">
@@ -351,7 +351,7 @@
                 href="assets/img/menu/habisgelap.png"><img src="assets/img/menu/habisgelap.png" class="img-fluid"
                   alt=""></a></div>
             <div class="swiper-slide"><a class="glightbox" data-gallery="images-gallery"
-                href="assets/img/menu/kata.png"><img src="assets/img/menu/kata.png" class="img-fluid" alt=""></a>
+                href="books/kata.html"><img src="assets/img/menu/kata.png" class="img-fluid" alt=""></a>
             </div>
             <div class="swiper-slide"><a class="glightbox" data-gallery="images-gallery"
                 href="assets/img/menu/seniberbicara.png"><img src="assets/img/menu/seniberbicara.png" class="img-fluid"
@@ -474,7 +474,8 @@
         <div class="section-header">
           <h2>Ingin jual buku anda?</h2>
           <p>Gabung <span>Bersama Kami</span> Sekarang!</p>
-          <button type="button" class="btn mt-3 shadow" style="font-weight: 500; font-size: 14px; letter-spacing: 1px; display: inline-block; padding: 12px 36px; border-radius: 50px; transition: 0.5s; background-color:#CE1212; color:white">Klik disini</button>
+          <a href="bookup.html" class="btn mt-3 shadow" style="font-weight: 500; font-size: 14px; letter-spacing: 1px; display: inline-block; 
+          padding: 12px 36px; border-radius: 50px; transition: 0.5s; background-color:#CE1212; color:white">Klik disini</a>
         </div>
 
         <!-- <div class="row g-0">
